# chat-app-microservices

./: .gitignore  .gitlab-ci.yml  .hadolint.yaml  CMakeLists.txt  Envsettings  README.md  auto_complete.sh  docker-compose.yml  etc_group  etc_passwd  pre-up.sh  vas.sh
docker/adevcon/: Dockerfile  build.sh  createuser.sh  docker  rcS  ssh  stage1  stage2  stage3  start
docker/socket-server/: Dockerfile
hooks/: install.sh
k8s-configuration/: config.conf
k8s-configuration/application-k8s-configuration/: authentication-deployment.yaml  socket-server-deployment.yaml
k8s-configuration/mysql-k8s-configuration/: mysql-secret.yaml  mysql-statefulset.yaml  mysql-storage.yaml
socket-client/: Dockerfile
socket-client/src/: script.sh
socket-client/src/controller/: ChatController.cpp  ChatController.h
socket-client/src/model/: ChatClient.cpp  ChatClient.h  MessageClient.cpp  MessageClient.h  UserClient.cpp  UserClient.h
socket-client/src/services/: ChatService.cpp  ChatService.h
socket-client/src/view/: ChatView.cpp  ChatView.h  StatusBar.cpp  StatusBar.h
socket-server/src/: main.cpp  server
socket-server/src/controller/: ChatServerController.cpp  ChatServerController.h
socket-server/src/model/: Chat.cpp  Chat.h  Message.cpp  Message.h  User.cpp  User.h
unittest/: CMakeLists.txt  Gtest.cpp  checkStyle.sh
unittest/apache-jmeter-5.5/backups/: API_jmeter-000044.jmx  API_jmeter-000045.jmx  API_jmeter-000046.jmx  API_jmeter-000047.jmx  API_jmeter-000048.jmx  API_jmeter-000049.jmx  API_jmeter-000050.jmx  API_jmeter-000051.jmx  API_jmeter-000052.jmx  API_jmeter-000053.jmx  socket-connection-000090.jmx  socket-connection-000091.jmx  socket-connection-000092.jmx  socket-connection-000093.jmx  socket-connection-000094.jmx  socket-connection-000095.jmx  socket-connection-000096.jmx  socket-connection-000097.jmx  socket-connection-000098.jmx
(+27 files in other folders)
